19900509-23:30 Eddie Runia
   * source/working/mankala.prg
     Instructions added

19990509-21:00 Eddie Runia
   * hvm.c
     Logical equivalence tests added ( ==, !=, >, <, >=, <= )
   * debugtst.c
     Logical equivalence used. (==) aoMethod down to one-liner !

19990509-19:30 Eddie Runia
   * makefile.b16, makefile.b32
     debug.obj added

19990509-18:10 Eddie Runia
   * tests/working/calling
     Function Second changed to SecondOne()
   * tests/working/initexit
   * tests/working/statfun
     See above
   * tests/working/testtok
     i was required in next (??)

19990509-18:00 CET Victor Szel <info@szelvesz.hu>

   * source/rtl/strings.c:
     hb_At() -> hb_strAt()
   * source/rtl/*.c, source/include/extend.h
     hb_julian2greg() -> hb_dateDecode()
     hb_greg2julian() -> hb_dateEncode()

19990508-20:57 Eddie Runia
   * source/rtl/arrays.c:
     Fixed unreleased memory block in aEval.

19990508-15:24 CET Victor Szel <info@szelvesz.hu>

   * source/rtl/strings.c:
     Fixed warning in PADR(), PADL(), PADC() (David G. Holm)

19990507-23:45 EDT David G. Holm <dholm@jsd-llc.com>
  This update makes Harbour compatible with the IBM C++ compiler.
  * include/init.h
    - Added test for IBM C++ compiler to Microsoft C #if block
  * include/types.h
    - Added #ifdef block for IBM C++ compiler to set #define for
      HARBOUR as simply void and also to set up a new #define
      for EXTERNAL_LINKAGE (as _LNK_CONV) in order for the
      IBM C++ compiler to compile harbour.y.
  * source/compiler/harbour.l
    - Added static to forward delcaration for yyunput in order to
      match the actual definition.
  * source/compiler/harbour.y
    - Added static to forward declaration of __yy_memcpy in order
      to match the actual definition.
    - Added EXTERNAL_LINKAGE to sz_compare4 definition, so
      that the IBM C++ compiler can successfully compile Harbour.
    - Added (BYTE *) type override to szText parameter in second