@@ -3,7 +3,7 @@
 */
 //DO NOT RUN THIS PROGRAM - ITS PURPOSE IS THE SYNTAX CHECK ONLY!
 
-STATIC nExt, bEgin, bReak, cAse
+STATIC nExt, bEgin, bReak, cAse, do, wHile, wIth
 
 Function Main()
 
@@ -12,13 +12,23 @@ Function Main()
     RETURN nil
   ENDIF
 
-   NEXT(nExt)	//in Clipper: NEXT does not match FOR
+//
+//DANGER!!
+//One line comments that ends with '**/' doesn't work!!!
+//
+//
+
+//   NEXT(nExt)	//in Clipper: NEXT does not match FOR
    BEGIN( bEgin +';' + ;;   //////Clipper doesn't like more then one ';'
           ";" ; /* ;;;;;Clipper doesn't like this comment after ';' ;;;;;;; */
         )
    BREAK_(bReak)
 //   CASE(case)	//it is not possible to call case() in this context
    case :=CASE( CASE )	//this is valid
+
+   //DO is reserved function name in Clipper!
+   DO_( nExt+bEgin/bReak-do*wHile%cAse $ wIth )
+//   WHILE( while ) //it is not possible to call while() in this context
 
 RETURN nil
 
@@ -53,6 +63,8 @@ Local nExt, nExt7, nExtNEXT
    nExt[ 1 ] :=nExt	//in Clipper: NEXT does not match FOR
    nExt[ nExt ] := NEXT( nExt[nExt+nExt] * nExt *(nExt+nExt*5) )
 
+   next->next :=next->next + next->next
+
   IF( nExt > nExt+4 )
     nExt =nExt +nExt * 5
   ELSEIF( nExt > 0 )
@@ -65,7 +77,7 @@ RETURN( nExt * /*next*/ nExt )
 
 /*===================================================================
 * Checking for BEGIN
-*/
+**/
 FUNCTION BEGIN( BEGIN_BEGIN )
 LOCAL bEgin
 LOCAL xbEgin
@@ -86,6 +98,8 @@ BEGIN SEQUENCE
       --bEgin
     NEXT bEgin
 
+    begin->begin :=begin->begin +; /************************/
+	begin->begin
     bEgin :=BEGIN( xbegin +bEgin +bEginBEGIN -bEgin0 * xbEginBEGIN ) +;
             bEgin[ bEgin ]
 
@@ -101,7 +115,7 @@ RETURN bEgin ^ 2
 
 /*====================================================================
 * Test for BREAK and BEGIN/RECOVER sequence
-*/
+**/
 FUNCTION BREAK_( break_break )
 LOCAL bReak:=0
 
@@ -112,7 +126,7 @@ LOCAL bReak:=0
     Break()	//in Clipper: syntax error: ')'
   ENDIF
 
-  Break /**** BREAK AGAIN ****/;     ;;;;;
+  Break /*** break ***/ ;
 ; //////////////////////////////////////////////////
 ; //What
 ; //the
@@ -122,8 +136,9 @@ LOCAL bReak:=0
 ; //is
 ; //doing
 ; //in
-; //this
-; //place?
+; //place
+; //like
+; //this?
 ; //Do
 ; //you
 ; //use
@@ -136,6 +151,7 @@ begin sequence
   FOR bReak:=1 To 10
     QOut( bReak * bReak )
   NEXT bReak
+  break->break :=break->break +break->break
   BREAK
   bReak :=IIF( bReak=1, BREAK(0), BREAK(bReak) )
 recover USING bReak
@@ -186,8 +202,128 @@ case )
   CASE( CASE )
     case =case != case
   CASE( CASE )	//new CASE or function call? :)
+  CASE case->case
+    case->case :=case->case +1
   OTHERWISE
     case *=case
   ENDCASE
 
 RETURN case
+
+/*====================================================================
+* Test for DO CASE / DO WHILE / DO / WITH
+*/
+FUNCTION DO_( do )
+LOCAL case
+LOCAL while
+LOCAL with
+
+  do case
+  case do
+  case case
+  endcase
+
+  do/***do***/case/**/
+  case do
+  endcase
+
+  DO CASE
+  ENDCASE
+
+  while .t.
+  enddo
+
+  do ;
+   while do
+   do :=1
+  enddo
+
+  do/***do***/while do/***do do do, da da da***/
+   do :=do
+  enddo
+
+  do :={|do| do}
+  do while do
+    do()
+    do->do :=do()
+    do++
+    do--
+  enddo
+
+  do while while
+    ++do
+  enddo
+
+  do++
+  do +=do
+  do->do :=do->do +1
+  do[ 1 ] :=do
+  do[ do ] :=do[ do ][ do ]
+
+  DO do WITH do
+  DO do WITH do()
+  DO do
+
+  DO while;
+   while
+   while :=while()
+  ENDDO
+
+  while while
+//   while++	//incomplete statement or unbalanced delimiter
+//   while--	//incomplete statement or unbalanced delimiter
+   --while
+   while +=while
+   while->while :=while() +while->while
+  enddo
+
+  while[ 1 ] :=while 
+  while[ while ] :=while[ while ]
+  while :={|while| while}
+  while while++ < 10
+  enddo
+
+  DO /* ****  */;
+;
+;
+ while
+
+  DO while WITH
+   do :=with + while
+  ENDDO
+
+  do WITH;
+;
+;
+
+  with()
+
+  DO while WITH while
+  DO while WITH while()
+  DO while WITH with
+  DO do WITH with
+  DO do WITH with()
+
+  with++
+  ++with
+  with +=with
+  with->with :=with() +with->with +1
+  with :={|with| with}
+  with[ with ] :=with[ with ][ with ]
+  with[ with ][ with ] =with[ with ][ with ]
+
+  DO with WITH with
+  DO with WITH with()
+  DO with WITH do
+  DO with WITH while
+  DO with WITH do()
+  DO with WITH while()
+
+RETURN DO
+
+
+FUNCTION WHILE( while )
+RETURN while
+
+FUNCTION With( with )
+RETURN with
